# Bear

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/rules/: rust.md  testing.md
.claude/skills/release/: SKILL.md
.devcontainer/: devcontainer.json
.github/: labels.yml
bear/: CLAUDE.md  build.rs
bear-codegen/: CLAUDE.md
bear-codegen/src/: env_keys.rs  lib.rs  recognition.rs
bear-codegen/tests/snapshots/: snapshots__snapshot_env_keys.snap  snapshots__snapshot_flags_armclang.snap  snapshots__snapshot_flags_clang.snap  snapshots__snapshot_flags_clang_cl.snap  snapshots__snapshot_flags_cray_fortran.snap  snapshots__snapshot_flags_cuda.snap  snapshots__snapshot_flags_flang.snap  snapshots__snapshot_flags_gcc.snap  snapshots__snapshot_flags_ibm_xl.snap  snapshots__snapshot_flags_intel_cc.snap  snapshots__snapshot_flags_intel_fortran.snap  snapshots__snapshot_flags_msvc.snap  snapshots__snapshot_flags_nvidia_hpc.snap  snapshots__snapshot_flags_vala.snap  snapshots__snapshot_recognition.snap
bear/compilers/: CLAUDE.md  README.md  gcc.yaml  vala.yaml
bear/src/: environment.rs
bear/src/output/clang/: path_format.rs
bear/src/output/writers/: atomic.rs
build-support/compilers-codegen/: CLAUDE.md
build-support/platform-checks/: CLAUDE.md
crates/bear/: CLAUDE.md  Cargo.toml
crates/bear-driver/: Cargo.toml
crates/bear-driver/src/: main.rs
crates/bear-wrapper/: Cargo.toml
crates/bear-wrapper/src/: main.rs
crates/bear/compilers/: CLAUDE.md  README.md
crates/bear/src/config/: types.rs
crates/bear/src/semantic/interpreters/: mod.rs
crates/bear/src/semantic/interpreters/compilers/: flag_based.rs  mod.rs
crates/intercept-supervisor/: Cargo.toml
crates/intercept-supervisor/src/: lib.rs  runner.rs  supervise.rs
docs/: CLAUDE.md
docs/rationale/: CLAUDE.md  ambiguous-cc-version-probe.md  compiler-env-flag-parsing.md  process-tree-teardown.md  source-filter-last-match-wins.md  vala-transpiler-database.md  wrapper-mode-design-decisions.md  wrapper-recursion-ccache-alternatives.md
docs/requirements/: CLAUDE.md  interception-compiler-env-with-flags.md  interception-events-format.md  interception-preload-mechanism.md  interception-signal-forwarding.md  interception-wrapper-mechanism.md  interception-wrapper-recursion.md  output-append.md  output-arguments-from-environment.md  output-atomic-write.md  output-compilation-entries.md  output-duplicate-detection.md  output-json-compilation-database.md  output-path-format.md  output-response-file-inlining.md  output-source-directory-filter.md  recognition-ambiguous-name-probe.md  semantic-cpp20-modules.md
integration-tests/: CLAUDE.md
integration-tests/tests/cases/: hardened_intercept.rs
intercept-preload/: CLAUDE.md  build.rs
man/: CLAUDE.md  bear.1  bear.1.md
platform-checks/: build.rs
scripts/: check-requirements-coverage.sh  install.sh
tests/dogfooding/: README.md  SPEC.md  consumer-fault-demo.sh  consumer-loop.sh  lib.sh  replay-loop.sh  run.sh  selftest.sh
tests/dogfooding/base/: Containerfile
tests/dogfooding/faults/: bad-directory.json  blank-directory.json  duplicate.json  empty-arguments.json  undercount.json
tests/dogfooding/faults/tu/: hello.c
tests/dogfooding/goldens/zlib/: compile_commands.json
tests/dogfooding/results/: README.md
tests/dogfooding/targets/curl/: config.env
tests/integration/: CLAUDE.md  Cargo.toml
tests/tools/: CLAUDE.md  Cargo.toml  SPEC.md
tests/tools/src/: cdb.rs  compare.rs  invariants.rs  lib.rs  matcher.rs  sample.rs
(+7 files in other folders)
