# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "bear-driver"
description = "Build supervisor binary for Bear that orchestrates interception and output."
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "bear-driver"
path = "src/main.rs"

[dependencies]
bear = { path = "../bear" }
intercept = { path = "../intercept" }
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
