# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "bear"
description = "Bear is a tool that generates a compilation database for clang tooling."
keywords = ["clang", "clang-tooling", "compilation-database"]
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "bear"
path = "src/lib.rs"

[dependencies]
intercept = { path = "../intercept" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
clap.workspace = true
log.workspace = true
shell-words.workspace = true
crossbeam-channel.workspace = true
regex-lite.workspace = true
which.workspace = true
libc.workspace = true

[build-dependencies]
compilers-codegen = { path = "../../build-support/compilers-codegen" }

[dev-dependencies]
tempfile.workspace = true
mockall.workspace = true
