# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "intercept-supervisor"
description = "Driver-side (supervisor) half of Bear's interception runtime (supervise, collector, build environment)."
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "intercept_supervisor"
path = "src/lib.rs"

[dependencies]
intercept = { path = "../intercept" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
signal-hook = { workspace = true, features = ["iterator"] }
which.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
