# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "bear-test-tools"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[lib]
name = "bear_test_tools"
path = "src/lib.rs"

[[bin]]
name = "cdb-compare"
path = "src/bin/cdb-compare.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
thiserror.workspace = true
